[package]
name = "mosaic-store-lmdb"
version = "0.1.0"
description = "Mosaic protocol record storage library using an LMDB backend"
authors = [ "Mike Dilger <mike@mikedilger.com>" ]
license = "MIT"
edition = "2024"

[dependencies]
heed = "0.22"
itertools = "0.14"
mmap-append = "0.2"
mosaic-core = { git = "https://github.com/mikedilger/mosaic-core", branch = "master" }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
